# SSKTS-343 swaggerでモックサーバー初期状態構築
